2001-05-11  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (PageInfo.common_javascript): Rename update_set to
	update_from_select_list.  Add move_option and swap_option.
	(__counter): Remove.
	(make_set_control): Use _counter.
	(_help_counter): Remove.
	(make_help_link_html): Use _counter.
	(make_select): Add default arguments.
	(make_choose_control): New function.
	(make_button_for_popup): Likewise.
	(_counter): New variable.
	* qm/fields.py (EnumerationField.GetTypeDescription): Fix quoting.
	(UidField.FormatValueAsHtml): Remove extraneous arguments to
	make_select. 
	* qm/track/web/summary.py (SummaryPageInfo.__init__): Add
	field_names parameter.  Generate display options page.
	(SummaryPageInfo.IsLinkToIssue): Remove.
	(DisplayOptionsPageInfo): New class.
	(handle_summary): Figure out fields to show.
	* share/dtml/track/summary.dtml: Add Display Options button.
	Adjust. 
	* share/dtml/track/summary-display-options.dtml: New file.

	* doc/manual/manual.xml: Fix title.

2001-05-10  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (make_select): New function.
	* qm/user.py (DefaultDatabase.keys): New method.
	(XmlDatabase.keys): Likewise.
	* qm/fields.py (EnumerationField.FormatValueAsHtml): Use
	make_select.
	(UidField.FormatValueAsHtml): New method.
	* share/xml/users.xml.test-values: New file.
	* qm/track/config.py (initialize_idb): Add test_values parameter.
	Initialize test values and test user database.
	* qm/track/cmdline.py (Command.__PerformInitialize): Don't
	generate test values here.

2001-05-10  Alex Samuel  <samuel@codesourcery.com>

	* qm/web.py (make_javascript_string): Don't escape slashes.
	* qm/platform.py: New class.
	(MailError.send_email): New function.
	* qm/fields.py (Field.FormatValueAsText): New method.
	(IntegerField.FormatValueAsText): Likewise.
	(TextField.FormatValueAsText): Likewise.
	(SetField.FormatValueAsText): Likewise.
	(AttachmentField.FormatValueAsText): Likewise.
	(EnumerationField.FormatValueAsText): Likewise.