@@ -79,45 +79,8 @@
      <table border="0" cellpadding="0" cellspacing="4" width="100%"><tr>
       <dtml-if name="edit">
 
-       <input type="hidden" 
-              name="test_ids" 
-              value="<dtml-var name="encoded_test_ids">"/>
        <td>
-        Included Tests:<br>
-        <select name="incl_tests"
-                width="160"
-                size="8"
-                onchange="document.form.excl_tests.selectedIndex = -1;">
-         <dtml-in expr="test_ids">
-         <dtml-let id=sequence-item>
-          <option value="<dtml-var name="id">"><dtml-var name="id"></option>
-         </dtml-let>
-         </dtml-in>
-        </select>
-       </td>
-       <td align="center">
-        <input type="button"
-               value=" << Add "
-               onclick="move(document.form.excl_tests,
-                             document.form.incl_tests);"/>
-        <br><br>
-        <input type="button"
-               value=" Remove >> "
-               onclick="move(document.form.incl_tests,
-                             document.form.excl_tests);"/>
-       </td>
-       <td>
-        Available Tests:<br>
-        <select name="excl_tests"
-                width="160"
-                size="8"
-                onchange="document.form.incl_tests.selectedIndex = -1">
-         <dtml-in expr="excluded_test_ids">
-         <dtml-let id=sequence-item>
-          <option value="<dtml-var name="id">"><dtml-var name="id"></option>
-         </dtml-let>
-         </dtml-in>
-        </select>
+        <dtml-var name="test_id_controls">
        </td>
        <td valign="top" align="right">
         <dtml-var expr="MakeHelpLink('suite test IDs control')">
@@ -157,45 +120,8 @@
       <table border="0" cellpadding="0" cellspacing="4" width="100%"><tr>
        <dtml-if name="edit">
 
-        <input type="hidden" 
-               name="suite_ids" 
-               value="<dtml-var name="encoded_suite_ids">"/>
         <td>
-         Included Suites:<br>
-         <select name="incl_suites"
-                 width="160"
-                 size="8"
-               onchange="document.form.excl_suites.selectedIndex = -1">
-          <dtml-in expr="suite_ids">
-          <dtml-let id=sequence-item>
-           <option value="<dtml-var name="id">"><dtml-var name="id"></option>
-          </dtml-let>
-          </dtml-in>
-         </select>
-        </td>
-        <td align="center">
-         <input type="button" 
-                value=" << Add "
-                onclick="move(document.form.excl_suites,
-                              document.form.incl_suites);"/>
-         <br><br>
-         <input type="button"
-                value=" Remove >> "
-                onclick="move(document.form.incl_suites,
-                              document.form.excl_suites);"/>
-        </td>
-        <td>
-         Available Suites:<br>
-         <select name="excl_suites"
-                 width="160"
-                 size="8"
-               onchange="document.form.incl_suites.selectedIndex = -1">
-          <dtml-in expr="excluded_suite_ids">
-          <dtml-let id=sequence-item>
-           <option value="<dtml-var name="id">"><dtml-var name="id"></option>
-          </dtml-let>
-          </dtml-in>
-         </select>
+         <dtml-var name="suite_id_controls">
         </td>
         <td valign="top" align="right">
          <dtml-var expr="MakeHelpLink('suite suite IDs control')">
